--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <meta charset="utf-8" />
     <title>Content Manager</title>
   </head>
